@@ -5,87 +5,85 @@
  * Implements hook_styleguide().
  */
 function styleguide_styleguide() {
-  $items = array(
-    'a' => array(
-      'title' => 'Link',
-      'content' => ucfirst(styleguide_word(3)) . ' ' . l(styleguide_word(3), 'node') . ' ' . styleguide_word(4) . '.',
-    ),
-    'em' => array(
-      'title' => 'Emphasis',
-      'content' => ucfirst(styleguide_word(3)) . ' <em>' . styleguide_word(3) . '</em> ' . styleguide_word(4) . '.',
-    ),
-    'strong' => array(
-      'title' => 'Strong',
-      'content' => ucfirst(styleguide_word(3)) . ' <strong>' . styleguide_word(3) . '</strong> ' . styleguide_word(4) . '.',
-    ),
-    'ul' => array(
-      'title' => 'Unordered list',
-      'theme' => 'item_list',
-      'variables' => array('items' => styleguide_list(), 'type' => 'ul'),
-      'group' => 'Lists',
-    ),
-    'ol' => array(
-      'title' => 'Ordered list',
-      'theme' => 'item_list',
-      'variables' => array('items' => styleguide_list(), 'type' => 'ol'),
-      'group' => 'Lists',
-    ),
-    'ul_title' => array(
-      'title' => 'Unordered list, with title',
-      'theme' => 'item_list',
-      'variables' => array('items' => styleguide_list(), 'type' => 'ul', 'title' => ucwords(styleguide_word())),
-      'group' => 'Lists',
-    ),
-    'ol_title' => array(
-      'title' => 'Ordered list, with title',
-      'theme' => 'item_list',
-      'variables' => array('items' => styleguide_list(), 'type' => 'ol', 'title' => ucwords(styleguide_word())),
-      'group' => 'Lists',
-    ),
-    'menu_tree' => array(
-      'title' => 'Menu tree',
-      'content' => drupal_render(menu_tree('management')),
-      'group' => 'Menus',
-    ),
-    'table' => array(
-      'title' => 'Table',
-      'theme' => 'table',
-      'variables' => array('header' => styleguide_header(), 'rows' => styleguide_rows()),
-      'group' => 'Tables',
-    ),
-    'text' => array(
-      'title' => 'Text block',
-      'content' => styleguide_paragraph(3),
-      'group' => 'Text',
-    ),
-    'image-horizontal' => array(
-      'title' => 'Image, horizontal',
-      'theme' => 'image',
-      'variables' => array('path' => styleguide_image('horizontal'), 'alt' => t('My image'), 'title' => t('My image')),
-      'group' => 'Media',
-    ),
-    'image-vertical' => array(
-      'title' => 'Image, vertical',
-      'theme' => 'image',
-      'variables' => array('path' => styleguide_image('vertical'), 'alt' => t('My image'), 'title' => t('My image')),
-      'group' => 'Media',
-    ),
-    'image-inset-horizontal' => array(
-      'title' => 'Image, horizontal, within text',
-      'content' => styleguide_paragraph(1) . theme('image', array('path' => styleguide_image('horizontal'), 'alt' => t('My image'), 'title' => t('My image'))) . styleguide_paragraph(2),
-      'group' => 'Media',
-    ),
-    'image-inset-vertical' => array(
-      'title' => 'Image, vertical, within text',
-      'content' => styleguide_paragraph(1) . theme('image', array('path' => styleguide_image('vertical'), 'alt' => t('My image'), 'title' => t('My image'))) . styleguide_paragraph(2),
-      'group' => 'Media',
-    ),
+  $items['a'] = array(
+    'title' => 'Link',
+    'content' => ucfirst(styleguide_word(3)) . ' ' . l(styleguide_word(3), 'node') . ' ' . styleguide_word(4) . '.',
+  );
+  $items['em'] = array(
+    'title' => 'Emphasis',
+    'content' => ucfirst(styleguide_word(3)) . ' <em>' . styleguide_word(3) . '</em> ' . styleguide_word(4) . '.',
+  );
+  $items['strong'] = array(
+    'title' => 'Strong',
+    'content' => ucfirst(styleguide_word(3)) . ' <strong>' . styleguide_word(3) . '</strong> ' . styleguide_word(4) . '.',
+  );
+  $items['ul'] = array(
+    'title' => 'Unordered list',
+    'theme' => 'item_list',
+    'variables' => array('items' => styleguide_list(), 'type' => 'ul'),
+    'group' => 'Lists',
+  );
+  $items['ol'] = array(
+    'title' => 'Ordered list',
+    'theme' => 'item_list',
+    'variables' => array('items' => styleguide_list(), 'type' => 'ol'),
+    'group' => 'Lists',
+  );
+  $items['ul_title'] = array(
+    'title' => 'Unordered list, with title',
+    'theme' => 'item_list',
+    'variables' => array('items' => styleguide_list(), 'type' => 'ul', 'title' => ucwords(styleguide_word())),
+    'group' => 'Lists',
+  );
+  $items['ol_title'] = array(
+    'title' => 'Ordered list, with title',
+    'theme' => 'item_list',
+    'variables' => array('items' => styleguide_list(), 'type' => 'ol', 'title' => ucwords(styleguide_word())),
+    'group' => 'Lists',
+  );
+  $items['menu_tree'] = array(
+    'title' => 'Menu tree',
+    'content' => menu_tree('management'),
+    'group' => 'Menus',
+  );
+  $items['table'] = array(
+    'title' => 'Table',
+    'theme' => 'table',
+    'variables' => array('header' => styleguide_header(), 'rows' => styleguide_rows()),
+    'group' => 'Tables',
+  );
+  $items['text'] = array(
+    'title' => 'Text block',
+    'content' => styleguide_paragraph(3),
+    'group' => 'Text',
+  );
+  $items['image-horizontal'] = array(
+    'title' => 'Image, horizontal',
+    'theme' => 'image',
+    'variables' => array('path' => styleguide_image('horizontal'), 'alt' => t('My image'), 'title' => t('My image')),
+    'group' => 'Media',
+  );
+  $items['image-vertical'] = array(
+    'title' => 'Image, vertical',
+    'theme' => 'image',
+    'variables' => array('path' => styleguide_image('vertical'), 'alt' => t('My image'), 'title' => t('My image')),
+    'group' => 'Media',
+  );
+  $items['image-inset-horizontal'] = array(
+    'title' => 'Image, horizontal, within text',
+    'content' => styleguide_paragraph(1) . theme('image', array('path' => styleguide_image('horizontal'), 'alt' => t('My image'), 'title' => t('My image'))) . styleguide_paragraph(2),
+    'group' => 'Media',
+  );
+  $items['image-inset-vertical'] = array(
+    'title' => 'Image, vertical, within text',
+    'content' => styleguide_paragraph(1) . theme('image', array('path' => styleguide_image('vertical'), 'alt' => t('My image'), 'title' => t('My image'))) . styleguide_paragraph(2),
+    'group' => 'Media',
   );
   $content = '';
   for ($i = 1; $i <=6; $i++) {
     $content .= "<h$i>" . "h$i: " . implode(' ', styleguide_list()) . "</h$i>";
   }
-  $items["headings"] = array(
+  $items['headings'] = array(
     'title' => "Headings",
     'content' => $content,
     'group' => 'Text',
@@ -94,7 +92,7 @@ function styleguide_styleguide() {
   for ($i = 1; $i <=6; $i++) {
     $content .= "<h$i>" . "h$i: " . implode(' ', styleguide_list()) . "</h$i>" . styleguide_paragraph(1);
   }
-  $items["headings_text"] = array(
+  $items['headings_text'] = array(
     'title' => "Headings with text",
     'content' => $content,
     'group' => 'Text',
@@ -133,37 +131,37 @@ function styleguide_styleguide() {
   }
   $items['form'] = array(
     'title' => 'Forms, basic',
-    'content' => drupal_render(drupal_get_form('styleguide_form', $basic)),
+    'content' => drupal_get_form('styleguide_form', $basic),
     'group' => 'Forms',
   );
   $items['form-submit'] = array(
     'title' => 'Forms, submit',
-    'content' => drupal_render(drupal_get_form('styleguide_form', array('submit'))),
+    'content' => drupal_get_form('styleguide_form', array('submit')),
     'group' => 'Forms',
   );
   $items['form-button'] = array(
     'title' => 'Forms, button',
-    'content' => drupal_render(drupal_get_form('styleguide_form', array('button'))),
+    'content' => drupal_get_form('styleguide_form', array('button')),
     'group' => 'Forms',
   );
   $items['form-image-button'] = array(
     'title' => 'Forms, image button',
-    'content' => drupal_render(drupal_get_form('styleguide_form', array('image_button'))),
+    'content' => drupal_get_form('styleguide_form', array('image_button')),
     'group' => 'Forms',
   );
   $items['form-markup'] = array(
     'title' => 'Forms, markup',
-    'content' => drupal_render(drupal_get_form('styleguide_form', $markup)),
+    'content' => drupal_get_form('styleguide_form', $markup),
     'group' => 'Forms',
   );
   $items['form-fieldsets'] = array(
     'title' => 'Forms, fieldsets',
-    'content' => drupal_render(drupal_get_form('styleguide_form', $fieldsets)),
+    'content' => drupal_get_form('styleguide_form', $fieldsets),
     'group' => 'Forms',
   );
   $items['form-vertical-tabs'] = array(
     'title' => 'Forms, vertical tabs',
-    'content' => drupal_render(drupal_get_form('styleguide_form', $tabs)),
+    'content' => drupal_get_form('styleguide_form', $tabs),
     'group' => 'Forms',
   );
 
