@@ -2,6 +2,9 @@
 
 CHANGELOG file for Style Guide.
 
+21-OCT-2010
+-- Patch #948886 by Dave Reid. General code cleaup and renderable arrays.
+
 20-OCT-2010
 -- Adds bottom baseline to element displays.
 -- Adds more hook documentation.
